changed font sizes + added logo image
added logo in pandorax title and changed font sizes and spacing for text

--- a/landing.html
+++ b/landing.html
@@ -16,29 +16,49 @@
     </nav>
   </header>
 
+  <style>
+    #home {
+      text-align: center;
+    }
+  
+    #home h1 {
+      font-family: Helvetica;
+      font-size: 1000%;
+      color:#fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  
+    #home h1 img {
+      height: 300px;
+      width: 300px;
+      margin: -60px;
+    }
+  </style>
+  
   <section id="home">
-    <h1>Pandorax</h1>
-    <p>Unleashing your true potential</p>
+    <h1>Pand<img src="assets/webstuff/pandoraxOpng-removebg-preview.png">rax</h1>
+    <p style="text-align: center; font-size: 125%">Unleashing your true potential.</p>
   </section>
 
   <section id="about">
     <h2>Dream Big.</h2>
-    <p>We all dream. Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. Well, not so much anymore with Pandorax. </p>
+    <p style="font-size: 125%; margin-right: 400px;">We all dream. Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. Well, not so much anymore with Pandorax. </p>
   </section>
 
   <section id="olympiad page ex1">
-    <h2>olympiad page ex1 thing</h2>
-    <p>At Pandorax, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, the Olympiad Guides, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. We are here to nurture them. </p>
+    <p style="font-size: 125%; margin-right: 400px;">At Pandorax, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, the Olympiad Guides, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. We are here to nurture them. </p>
   </section>
 
   <section id="contact">
-    <h2>Prepared and taught by 50+ high-performing high school/college students worldwide.</h2>
-    <p>Our original guides are written and taught by an international team of 50+ quality instructors from top high schools and universities, having received national or international recognition in prestigious Olympiad competitions. With extensive knowledge and experience in their respective fields, our instructors will guide you from introductory to expert level through Pandorax products and programs — for free. </p>
+    <h4>Prepared and taught by 50+ high-performing high school/college students worldwide.</h2>
+    <p style="font-size: 125%; margin-right: 400px;">Our original guides are written and taught by an international team of 50+ quality instructors from top high schools and universities, having received national or international recognition in prestigious Olympiad competitions. With extensive knowledge and experience in their respective fields, our instructors will guide you from introductory to expert level through Pandorax products and programs — for free. </p>
   </section>
 
   <section id="thingy">
     <p>We will guide you, step by step, from a dreamer to a doer. Unlock your potential today.</p>
-    <h3>Open the pandora box now.</h3>
+    <h5>Open the pandora box now.</h3>
   </section>
 
   <script src="assets/script.js"></script>
