--- a/landing.html
+++ b/landing.html
@@ -44,16 +44,23 @@
 
   <section id="about">
     <h2>Dream Big.</h2>
-    <p style="font-size: 125%; margin-right: 400px;">We all dream. Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. Well, not so much anymore with Pandorax. </p>
+    <p style="font-size: 125%; margin-right: 40%;">We all dream. Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. Well, not so much anymore with Pandorax. </p>
+    <img src="assets/webstuff/indbg1.png" style="height: 300px; width: 300px;">
+    <img src="assets/webstuff/indbg2.png" style="height: 400px; width: 400px;">
+    <img src="assets/webstuff/indbg3.png" style="height: 300px; width: 300px;">
+    <img src="assets/webstuff/indbg4.png" style="height: 300px; width: 300px;">
+    <img src="assets/webstuff/indbg5.png" style="height: 300px; width: 300px;">
+  
   </section>
 
-  <section id="olympiad page ex1">
-    <p style="font-size: 125%; margin-right: 400px;">At Pandorax, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, the Olympiad Guides, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. We are here to nurture them. </p>
+
+  <section id=`olympiad page ex1">
+    <p style="font-size: 125%; margin-right: 40%;">At Pandorax, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, the Olympiad Guides, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. We are here to nurture them. </p>
   </section>
 
   <section id="contact">
     <h4>Prepared and taught by 50+ high-performing high school/college students worldwide.</h2>
-    <p style="font-size: 125%; margin-right: 400px;">Our original guides are written and taught by an international team of 50+ quality instructors from top high schools and universities, having received national or international recognition in prestigious Olympiad competitions. With extensive knowledge and experience in their respective fields, our instructors will guide you from introductory to expert level through Pandorax products and programs — for free. </p>
+    <p style="font-size: 125%; margin-right: 40%;">Our original guides are written and taught by an international team of 50+ quality instructors from top high schools and universities, having received national or international recognition in prestigious Olympiad competitions. With extensive knowledge and experience in their respective fields, our instructors will guide you from introductory to expert level through Pandorax products and programs — for free. </p>
   </section>
 
   <section id="thingy">
