random font changes
playing around with stuff

--- a/landing.html
+++ b/landing.html
@@ -54,7 +54,7 @@
   </section>
 
 
-  <section id=`olympiad page ex1">
+  <section id="olympiad page ex1">
     <p style="font-size: 125%; margin-right: 40%;">At Pandorax, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, the Olympiad Guides, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. We are here to nurture them. </p>
   </section>
 
