--- a/landing.html
+++ b/landing.html
@@ -16,30 +16,14 @@
     </nav>
   </header>
 
-  <style>
-    #home {
-      text-align: center;
-    }
-  
-    #home h1 {
-      font-family: Helvetica;
-      font-size: 1000%;
-      color:#fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  
-    #home h1 img {
-      height: 300px;
-      width: 300px;
-      margin: -60px;
-    }
-  </style>
-  
+
   <section id="home">
-    <h1>Pand<img src="assets/webstuff/pandoraxOpng-removebg-preview.png">rax</h1>
-    <p style="text-align: center; font-size: 125%">Unleashing your true potential.</p>
+    <h1>
+      <span id="title">Pand</span>
+      <img id="logo" src="assets/webstuff/pandoraxOpng-removebg-preview.png" style="length: 300px; width: 300px; object-position: 5, 5" />
+      <span id="title">rax</span>
+    </h1>
+    <p id="btext" style="text-align: center; font-size: 125%; margin-bottom: 20%">Unleashing your true potential.</p>
   </section>
 
   <section id="about">
@@ -50,7 +34,6 @@
     <img src="assets/webstuff/indbg3.png" style="height: 300px; width: 300px;">
     <img src="assets/webstuff/indbg4.png" style="height: 300px; width: 300px;">
     <img src="assets/webstuff/indbg5.png" style="height: 300px; width: 300px;">
-  
   </section>
 
 
