Edited text size and spacing
made text size and spacing bigger and more asthetic, also added basic animations without the timing

--- a/landing.html
+++ b/landing.html
@@ -23,27 +23,27 @@
       <img id="logo" src="assets/webstuff/pandoraxOpng-removebg-preview.png" style="length: 300px; width: 300px; object-position: 5, 5" />
       <span id="title">rax</span>
     </h1>
-    <p id="btext" style="text-align: center; font-size: 125%; margin-bottom: 20%">Unleashing your true potential.</p>
+    <p id="btext" style="text-align: center; font-size: 225%; margin-bottom: 20%">Unleashing your true potential.</p>
   </section>
 
   <section id="about">
-    <h2>Dream Big.</h2>
-    <p style="font-size: 125%; margin-right: 40%;">We all dream. Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. Well, not so much anymore with Pandorax. </p>
-    <img src="assets/webstuff/indbg1.png" style="height: 300px; width: 300px;">
-    <img src="assets/webstuff/indbg2.png" style="height: 400px; width: 400px;">
-    <img src="assets/webstuff/indbg3.png" style="height: 300px; width: 300px;">
-    <img src="assets/webstuff/indbg4.png" style="height: 300px; width: 300px;">
-    <img src="assets/webstuff/indbg5.png" style="height: 300px; width: 300px;">
+    <h2 id="dreambig">Dream Big.</h2>
+    <p  id="dbt" style="font-size: 225%; margin-left: 7%; margin-right: 15%; color: #706d69; margin-bottom: 20%"><span style="color:#fff">We all dream.</span> Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. <span style="color:#fff">Well, not so much anymore with Pandorax.</span> </p>
+    <img id="dreambigimg1" src="assets/webstuff/indbg1.png" style="height: 300px; width: 300px;">
+    <img id="dreambigimg2" src="assets/webstuff/indbg2.png" style="height: 400px; width: 400px;">
+    <img id="dreambigimg3" src="assets/webstuff/indbg3.png" style="height: 300px; width: 300px;">
+    <img id="dreambigimg4" src="assets/webstuff/indbg4.png" style="height: 300px; width: 300px;">
+    <img id="dreambigimg5" src="assets/webstuff/indbg5.png" style="height: 300px; width: 300px;">
   </section>
 
 
-  <section id="olympiad page ex1">
-    <p style="font-size: 125%; margin-right: 40%;">At Pandorax, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, the Olympiad Guides, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. We are here to nurture them. </p>
+  <section id="oly">
+    <p style="font-size: 225%; margin-left: 7%; margin-right: 15%; color: #706d69; margin-bottom: 20%"><span style="color:#fff">At Pandorax</span>, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, <span style="color:#fff">the Olympiad Guides</span>, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. <span style="color:#fff">We are here to nurture them.</span> </p>
   </section>
 
   <section id="contact">
-    <h4>Prepared and taught by 50+ high-performing high school/college students worldwide.</h2>
-    <p style="font-size: 125%; margin-right: 40%;">Our original guides are written and taught by an international team of 50+ quality instructors from top high schools and universities, having received national or international recognition in prestigious Olympiad competitions. With extensive knowledge and experience in their respective fields, our instructors will guide you from introductory to expert level through Pandorax products and programs — for free. </p>
+    <h4 id="fif">Prepared and taught by 50+ high-performing high school/college students worldwide.</h2>
+    <p id="fift" style="font-size: 225%; margin-left: 7%; margin-right: 15%; color: #706d69; margin-bottom: 20%">Our original guides are written and taught by <span style="color:#fff">an international team of 50+ quality instructors</span> from <span style="color:#fff">top high schools and universities</span>, having received national or international recognition in prestigious <span style="color:#fff">Olympiad competitions</span>. With extensive knowledge and experience in their respective fields, our instructors will guide you from introductory to expert level through Pandorax products and programs <span style="color:#fff">— for free</span>. </p>
   </section>
 
   <section id="thingy">
