--- a/landing.html
+++ b/landing.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" href="assets/webstuff/pandoraxO">
 </head>
-<body>
   <header>
     <nav>
       <ul>
@@ -27,19 +26,23 @@
     <p id="btext" style="text-align: center; font-size: 225%; margin-bottom: 20%">Unleashing your true potential.</p>
   </section>
 
-  <section id="about">
-    <h2 id="dreambig">Dream Big.</h2>
-    <p  id="dbt" style="font-size: 225%; margin-left: 7%; margin-right: 15%; color: #706d69; margin-bottom: 20%; font-weight: bold"><span style="color:#fff">We all dream.</span> Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. <span style="color:#fff">Well, not so much anymore with Pandorax.</span> </p>
-    <img id="dreambigimg1" src="assets/webstuff/indbg1.png" style="height: 300px; width: 300px;">
-    <img id="dreambigimg2" src="assets/webstuff/indbg2.png" style="height: 400px; width: 400px;">
-    <img id="dreambigimg3" src="assets/webstuff/indbg3.png" style="height: 300px; width: 300px;">
-    <img id="dreambigimg4" src="assets/webstuff/indbg4.png" style="height: 300px; width: 300px;">
-    <img id="dreambigimg5" src="assets/webstuff/indbg5.png" style="height: 300px; width: 300px;">
-  </section>
+  <section id="about" style="position:relaitve">
+  <div style="position:absolute; z-index:5">
+      <h2 id="dreambig">Dream Big.</h2>
+    <p  id="dbt" style="font-size: 225%; margin-left: 7%; margin-right: 15%; color: #706d69; margin-bottom: 2%; font-weight: bold"><span style="color:#fff">We all dream.</span> Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. <span style="color:#fff">Well, not so much anymore with Pandorax.</span> </p>
+  </div>
+  <div id="dbi" style="position:absolute;width:100%; z-index:1 display:flex; ">
+    <img id="dreambigimg1" src="assets/webstuff/indbg1.png" style="height: 300px; width: 300px;transform: translateX(15%)">
+    <img id="dreambigimg2" src="assets/webstuff/indbg2.png" style="height: 400px; width: 400px;transform: translateY(100%) translateX(-5%)">
+    <img id="dreambigimg3" src="assets/webstuff/indbg3.png" style="height: 300px; width: 300px;transform: translateY(-20%) translateX(-50%)">
+    <img id="dreambigimg4" src="assets/webstuff/indbg4.png" style="height: 300px; width: 300px;transform: translateY(100%) translateX(-35%)">
+    <img id="dreambigimg5" src="assets/webstuff/indbg5.png" style="height: 250px; width: 250px;transform: translateX(-20%)">
+  </div>
+    </section>
 
 
   <section id="oly">
-    <p style="font-size: 225%; margin-left: 7%; margin-right: 15%; color: #706d69; margin-bottom: 20%; font-weight: bold"><span style="color:#fff">At Pandorax</span>, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, <span style="color:#fff">the Olympiad Guides</span>, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. <span style="color:#fff">We are here to nurture them.</span> </p>
+    <p style="font-size: 225%; margin-left: 7%; margin-right: 15%; color: #706d69; margin-bottom: 70%; margin-top: 60%; font-weight: bold"><span style="color:#fff">At Pandorax</span>, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, <span style="color:#fff">the Olympiad Guides</span>, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. <span style="color:#fff">We are here to nurture them.</span> </p>
   </section>
 
   <section id="contact">
