--- a/landing.html
+++ b/landing.html
@@ -51,9 +51,13 @@
   </section>
 
   <section id="thingy">
-    <p>We will guide you, step by step, from a dreamer to a doer. Unlock your potential today.</p>
-    <h5>Open the pandora box now.</h3>
+    <p id="bsm" style="font-size: 225%; text-align: center; color:#fff">We will guide you, step by step, from a dreamer to a doer.</p>
+    <h5 id="bsbg" style="font-size: 600%; text-align: center; color:#fff">Open the pandora box now.</h3>
+    <div id="container">
+        <button class="btn">Get Started</button>
+    </div>
   </section>
+
 
   <script src="assets/script.js"></script>
 </body>
