--- a/landing.html
+++ b/landing.html
@@ -21,10 +21,10 @@
   <section id="home">
     <h1>
       <span id="title">Pand</span>
-      <img id="logo" src="assets/webstuff/pandoraxOpng-removebg-preview.png"/>
+      <img id="logo" src="assets/webstuff/pandoraxOpng-removebg-preview.png" style="length: 300px; width: 300px; object-position: 5, 5" />
       <span id="title">rax</span>
     </h1>
-    <p id="btext" style="text-align: center; font-size: 225%; margin-bottom: 20%; align-items: center; justify-content: center;">Unleashing your true potential.</p>
+    <p id="btext" style="text-align: center; font-size: 225%; margin-bottom: 20%">Unleashing your true potential.</p>
   </section>
 
   <section id="about" style="position:relaitve">
