--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <header>
     <nav>
       <ul>
+        <!-- <li><img src="assets/webstuff/pandoraxOpng-removebg-preview.png" id="navim"></li> -->
         <li><a href="#home">Home</a></li>
+        <li><a href="#ooop">oop</a></li>
       </ul>
     </nav>
   </header>
@@ -24,7 +26,7 @@
       <img id="logo" src="assets/webstuff/pandoraxOpng-removebg-preview.png" />
       <span id="title">rax</span>
     </h1>
-    <p id="btext" style="text-align: center; font-size: 150%; margin-bottom: 25%">Unleashing your true potential.</p>
+    <p id="btext">Unleashing your true potential.</p>
   </section>
 
   <section id="about" style="position:relaitve;">
