moved logo to left side of title

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 
   <section id="home" style="display: flex; flex-direction: column; align-items: center;">
     <h1>
-      <span id="title">Pand</span>
       <img id="logo" src="assets/webstuff/pandoraxOpng-removebg-preview.png" />
-      <span id="title">rax</span>
+      <span id="title">Pandorax</span>
     </h1>
     <p id="btext">Unleashing your true potential.</p>
   </section>
