--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
   </header>
 
-
+<div class="containter2">
   <section id="home" style="display: flex; flex-direction: column; align-items: center;">
     <h1>
       <img id="logo" src="assets/webstuff/pandoraxOpng-removebg-preview.png" />
@@ -38,24 +38,25 @@
       <p  id="dbt" data-aos="fade-up" data-aos-once="true" data-aos-delay="50"><span style="color:#fff">We all dream.</span> Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. <span style="color:#fff">Well, not so much anymore with Pandorax.</span> </p>
     </div>
     <div id="dbi" data-aos="fade-up" data-aos-once="true" data-aos-delay="100"  style="position:absolute; z-index:-1; display: flex;">
-      <img id="dreambigimg1" src="assets/webstuff/indbg1.png" style="height: 400px; width: 400px;">
-      <!-- <img id="dreambigimg2" src="assets/webstuff/indbg2.png" style="height: 400px; width: 400px; object-position: 1260% 1500%;"> -->
-      <img id="dreambigimg3" src="assets/webstuff/indbg3.png" style="height: 300px; width: 300px;">
-      <img id="dreambigimg4" src="assets/webstuff/indbg4.png" style="height: 300px; width: 300px; ">
-      <img id="dreambigimg5" src="assets/webstuff/indbg5.png" style="height: 300px; width: 300px;">
+      <img id="dreambigimg3" src="assets/webstuff/indbg3.png" style="height: 600px; width: 600px; transform: translate(-2vw, -2vw)">
+      <img id="dreambigimg4" src="assets/webstuff/indbg4.png" style="height: 442px; width: 442px; transform: translate(0vw, -17vh)">
+      <img id="dreambigimg2" src="assets/webstuff/indbg2.png" style="height: 400px; width: 400px; transform: translate(0vw, 15vh)">
+      <img id="dreambigimg5" src="assets/webstuff/indbg5.png" style="height: 500px; width: 500px; transform: translate(2vw, -25vh)">
     </div>
   </section>
 
   <div class="stuff">
     <section class="oly" style="display: flex; flex-direction: column; align-items: center;">
-      <p id="olyt" data-aos="fade-up"  data-aos-once="true" ><span style=" color:#fff">At Pandorax</span>, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, <span style="color:#fff">the Olympiad Guides</span>, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. <span style="color:#fff">We are here to nurture them.</span> </p>
-      <div class="olyc" style="flex-direction: row">
-        <img id="aa" data-aos="fade-up"  data-aos-once="true" data-aos-delay="50"  src="assets/webstuff/usaaao_guide.png" />
-        <img id="es" data-aos="fade-up"  data-aos-once="true" data-aos-delay="100"  src="assets/webstuff/useso_guide.png" />
-        <img id="b" data-aos="fade-up"  data-aos-once="true" data-aos-delay="150" src="assets/webstuff/usabo_guide.png" />
-      </div>
+    <p data-aos="fade-up"  data-aos-once="true" ><span style=" color:#fff">At Pandorax</span>, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, <span style="color:#fff">the Olympiad Guides</span>, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. <span style="color:#fff">We are here to nurture them.</span> </p>
     </section>
   </div>
+
+  <div style="display: flex; flex-direction: row; justify-content: center;">
+    <img id="aa" data-aos="fade-up"  data-aos-once="true"   src="assets/webstuff/usaaao_guide.png" />
+    <img id="es" data-aos="fade-up"  data-aos-once="true" data-aos-delay="50"  src="assets/webstuff/useso_guide.png" />
+    <img id="b" data-aos="fade-up"  data-aos-once="true" data-aos-delay="100" src="assets/webstuff/usabo_guide.png" />
+  </div>
+
 
   <section id="contact" style="display: flex; flex-direction: column; align-items: center;">
     <h4 data-aos="fade-up"  data-aos-once="true" id="fif">Prepared and taught by 50+ high-performing high school/college students <span style="color:#00FF82">worldwide.</h2>
@@ -76,5 +77,6 @@
   <script>
     AOS.init();
   </script>
+</div>
 </body>
 </html>
