added title image

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <div class="containter2">
   <section id="home" style="display: flex; flex-direction: column; align-items: center;">
     <h1>
-      <img id="logo" src="assets/webstuff/pandoraxOpng-removebg-preview.png" />
-      <span id="title">Pandorax</span>
+      <img id="title" src="assets/webstuff/ptitle.png" />
+      <!-- <span id="title">Pandorax</span> -->
     </h1>
     <p id="btext">Turning dreams into reality.</p>
   </section>
